# streamlit-aggrid

./: .gitignore  .gitmodules  .readthedocs.yaml  .yarnrc.yml  LICENSE  MANIFEST.in  Pipfile  README.md  __init__.py  example.py  package.json  pyproject.toml  quick_example.py  requirements.txt  row_selection_example.py  setup.py
.devcontainer/: devcontainer.json
.github/: funding.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.streamlit/: config.toml
docs/: .gitignore  AgGrid.rst  Examples.rst  GridOptionsBuilder.rst  Usage.rst  conf.py  index.rst  requirements.txt
examples/: Localisation.py  cell_renderer_class_example.py  column_index.py  custom_css.py  example.py  example_highlight_change.py  fixed_key_example.py  forms.py  json_data.json  json_data.py  json_data_gridOptions.json  licensing_example.py  main_example.py  many_inputs.py  nested_grids.py  pinned_rows.py  quick_example.py  rich_cell_editor.py  themes_and_pre_selection.py  two_grids_example.py  virtual_columns.py
frontend/src/: AgGrid.tsx  index.tsx
st_aggrid/: AgGrid.py  AgGridReturn.py  __init__.py  aggrid_utils.py  column_factory.py  grid_options.py  grid_options_builder.py  package-lock.json  pyproject.toml  shared.py  types.py
st_aggrid/collectors/: __init__.py  factory.py  legacy.py
st_aggrid/frontend/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json
st_aggrid/frontend/config/: env.js  webpack.config.js
st_aggrid/frontend/public/: index.html
st_aggrid/frontend/src/: AgGrid.css  AgGrid.scss  AgGrid.tsx  ThemeParser.tsx  agGridStyle.old  agGridStyle.scss  constants.tsx  customColumns.tsx  index.tsx  scrollbar.css  utils.js
st_aggrid/json/: columnEvents.json  columnProps.json
streamlit_aggrid/: AgGrid.py  AgGridReturn.py  __init__.py  aggrid_utils.py  grid_options_builder.py  polars_server_service.py  pyproject.toml.old  server_side_service.py  shared.py
streamlit_aggrid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
streamlit_aggrid/collectors/: base.py  custom.py  minimal.py
streamlit_aggrid/frontend/: bundle-analysis.json  package.json  tsconfig.json  vite.config.ts
streamlit_aggrid/frontend/public/: index.html
streamlit_aggrid/frontend/src/: AgGrid.css  AgGrid.scss  AgGrid.tsx  ThemeParser.tsx  react-app-env.d.ts  utils.js
streamlit_aggrid/json/: gridEvents.json  gridOptions.json  rowEvents.json
streamlit_aggrid_pkg_pablofonseca.egg-info/: PKG-INFO  SOURCES.txt
test/: 1_grid_init.py  e2e_utils.py  events_return.py  grid_add_colour_row.py  grid_data_render.py  grid_drag_and_drop_example.py  grid_initialization.py  grid_performance_1m.py  grid_return.py  infinite_row.py  json_performance.py  olympic-winners.json  simpleServer.py  test-gridOptions.json  test_collector_factory.py  test_collector_patterns.py  test_component_v2.py  test_css_injection.py  test_example_utils.py  test_examples_advanced.py  test_examples_core.py  test_examples_data.py  test_examples_events.py  test_examples_integration.py  test_examples_state.py  test_grid_data_render.py  test_grid_drag_and_drop_example.py  test_grid_initialization.py  test_grid_performance.py  test_grid_return.py  weather_stations.txt
test/core/: test_grid_initialization.py
(+18 files in other folders)
