[tool.poetry]
name = "streamlit-aggrid"
version = "1.1.3"
description = "Streamlit component implementation of ag-grid"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/PablocFonseca/streamlit-aggrid"
authors = ["Pablo Fonseca <pablo.fonseca+pip@gmail.com>"]
readme = "README.md"
exclude = ["**/node_modules/**/*", "**/frontend/src/**/*", "**/.yarn/**/*"]
include = ["**/frontend/build/**/*"]
packages = [{ include = "st_aggrid" }]

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = ">=1.2"
pandas = ">=1.4.0"
python-decouple = "*"

[tool.poetry.dev-dependencies]
ruff = "*"

[tool.poetry.group.dev.dependencies]
bs4 = "^0.0.2"
playwright = "^1.51.0"
pytest = "^8.3.5"
pytest-playwright = "^0.7.0"
watchdog = "^6.0.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
starlette = "^0.46.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
